--- a/chapter9.Rmd
+++ b/chapter9.Rmd
@@ -218,7 +218,10 @@ test_error()
 test_function("sum_n", incorrect_msg = "You need to check for the sum of 5000 integers!")
 fun_def <- ex() %>% check_fun_def("sum_n")
 fun_def %>% check_arguments()
-fun_def %>% check_call(5000) %>% check_call(100) %>% check_call(1000)
+fun_def %>% check_call(5000) %>% check_result() %>% check_equal()
+fun_def %>% check_call(100) %>% check_result() %>% check_equal()
+fun_def %>% check_call(1000) %>% check_result() %>% check_equal()
+
 fun_def %>% check_body()
 success_msg("This is awesome! Let's get to the next exercise.")
 ```
