Ch9: more fixes

--- a/chapter9.Rmd
+++ b/chapter9.Rmd
@@ -440,7 +440,9 @@ test_output_contains("compute_s_n(10)", incorrect_msg = "Make sure your function
 test_student_typed("compute_s_n(10)", not_typed_msg = "Make sure you evaluate the function at 10 in the last line.")
 fun_def <- ex() %>% check_fun_def("compute_s_n")
 fun_def %>% check_arguments()
-fun_def %>% check_call(10) %>% check_call(100) %>% check_call(1000)
+fun_def %>% check_call(10) %>% check_result() %>% check_equal()
+fun_def %>% check_call(100) %>% check_result() %>% check_equal()
+fun_def %>% check_call(1000) %>% check_result() %>% check_equal()
 fun_def %>% check_body()
 success_msg("That's awesome! You're getting so good at this!")
 ```
@@ -522,7 +524,9 @@ test_object("s_n", incorrect_msg = "You are getting the incorrect values. Check 
 test_function("vector")
 fun_def <- ex() %>% check_fun_def("compute_s_n")
 fun_def %>% check_arguments()
-fun_def %>% check_call(10) %>% check_call(100) %>% check_call(1000)
+fun_def %>% check_call(10) %>% check_result() %>% check_equal()
+fun_def %>% check_call(100) %>% check_result() %>% check_equal()
+fun_def %>% check_call(1000) %>% check_result() %>% check_equal()
 fun_def %>% check_body()
 for_loop <- ex() %>% check_for()
 # check condition ("i in 1:5" in the solution)
